 2.0b (October XX, 2015)
=========================
Bumped up the transparency of shields
Transparency of ship contacts is based on the alpha of the actual sprite:
 - Ships with custom right click ship systems won't be momentarily transparent
   on the radar after using them anymore (ex: Exigency Incorporated)
 - Fighters taking off or landing on a carrier now fade in/out
 - Removed "phasedShipAlphaMult" setting, added "minShipAlphaMult"

 2.0 (October 04, 2015)
========================
Radar framerate is now separate from Starsector's framerate, defaults to 20 FPS
Merged radar settings into a single file, data/config/radar/radar_settings.json
Combined campaign and combat radars into one codebase
Replaced CampaignRadar and CombatRadar with a generic CommonRadar interface
Added excluded_ships.csv, can exclude single hulls or ones with certain prefixes
Added excluded_missiles.csv, can exclude missiles by their projectile ID
Added RadarSettings class to retrieve loaded renderers and radar settings
Added getCurrentSightRadius() to CommonRadar interface
Improved icon for relays in the campaign
All renderers now support a "maxShown" setting where valid
Campaign fleet renderer changes:
 - Fleets with a bounty on their head are now shown as gold on the radar
   (faction-level bounties flash between gold and their regular color so you
    won't accidently chase/attack a friendly faction)
Combat progress renderer changes:
 - Relative fleet balance calculation is no longer based on information that
   the player can't obtain in-game, is instead now based on the ship's fleet
   point costs (with a 75% penalty to calculated strength for civilian ships)
New combat renderer: MapBorderRenderer
 - Displays retreat zones in yellow
 - Displays gravity barrier line in red
 - Displays out of bounds in grey
New combat renderer: ShipRenderer
 - Replaces ShipSimpleRenderer and ShipPolygonRenderer
 - Draws proper polygons for ships instead of approximations like old system